# magicblock-delegation-program-pinocchio

./: Cargo.toml
src/: entrypoint.rs  lib.rs
src/instructions/: delegate.rs  mod.rs
src/states/: utils.rs
