cargo-features = ["edition2024"]

[package]
name = "magicblock-delegation-program-pinocchio"
version = "0.1.0"
edition = "2024"

[dependencies]
pinocchio = "0.8.1"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
pinocchio-token = "0.3.0"
bytemuck = { version = "1.19.0", features = ["derive" , "const_zeroed"] }
